# TileDB-SOMA-ML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  train-lightning.py
.github/workflows/: ghp.yml  python-tiledbsoma-ml.yml  python-tilledbsoma-ml-compat.yml  release.yml
docs/: Makefile  README.md  conf.py  index.rst  performance_tuning.md  requirements.txt
docs/_static/: custom.css
examples/: compare_dataloader_performance.py  optimized_training_example.py
notebooks/: 4workers-tongue.ipynb  batch-dbg.ipynb  benchmark.ipynb  census-tissue-histogram.ipynb  census_tissue_hist.json  flat.py  flat2.py  inmemorydatasetdump.txt  lightning-intestine.ipynb  lightning-tongue.ipynb  lightning4-intestine.ipynb  lightning4-tongue.ipynb  poller.py  precursor.ipynb  pytorch-tongue.ipynb  pytorch_scvi.ipynb  pytorch_scvi_2.ipynb  pytorch_scvi_2_pytorch_benchmark.ipynb  pytorch_scvi_2_with_profiling.ipynb  pytorch_scvi_profiling.ipynb  requirements.txt  tissue-lines.json  torch-intestine.ipynb  torch4-intestine.ipynb  tutorial_lightning.ipynb  tutorial_multiworker.ipynb  tutorial_pytorch.ipynb  viz.py  worker_info.txt
notebooks/embryo/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  torch.ipynb  torch4.ipynb
notebooks/intestine/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  torch.ipynb  torch4.ipynb
notebooks/nose/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  torch.ipynb  torch4.ipynb
notebooks/ovary/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  torch.ipynb  torch4.ipynb
notebooks/placenta/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  torch.ipynb  torch4.ipynb
notebooks/tongue/: lightning-cpu.ipynb  lightning.ipynb  lightning4.ipynb  torch-cpu.ipynb  (+3 more)
scripts/: rehome-census.sh
tests/: _utils.py  conftest.py  test_batch_dataset.py  test_batch_iterable.py  test_census.py  test_csr.py  test_dataloader.py  test_dataset.py  test_dataset2.py  test_eager_iter.py  test_pytorch.py  test_query_ids.py  test_utils.py
www/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+56 files in other folders)
